src/test/ui/switched-expectations.stderr
error[E0308]: mismatched types
  --> $DIR/switched-expectations.rs:13:30
   |
13 |     let ref string: String = var; //~ ERROR mismatched types [E0308]
   |                              ^^^ expected struct `std::string::String`, found i32
   |
   = note: expected type `std::string::String`
              found type `i32`

error: aborting due to previous error

